fixing modals overflow and adding adjustments to achievements

--- a/infinite-clicker-app/src/components/GameModal/styles.scss
+++ b/infinite-clicker-app/src/components/GameModal/styles.scss
@@ -65,4 +65,5 @@
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.3);
   z-index: 2;
+  overflow: auto;
 }
