--- a/infinite-clicker-app/src/components/UserInterface/components/AchievementUnlocked/styles.scss
+++ b/infinite-clicker-app/src/components/UserInterface/components/AchievementUnlocked/styles.scss
@@ -43,8 +43,8 @@
   position: absolute;
   top: 250px;
   left: initial;
-  right: 215px;
-  width: 260px;
+  right: 190px;
+  width: 290px;
   height: 160px;
 }
 
