--- a/infinite-clicker-app/src/components/UserInterface/components/Market/styles.scss
+++ b/infinite-clicker-app/src/components/UserInterface/components/Market/styles.scss
@@ -38,10 +38,13 @@
   }
 
   .materialCell {
+    padding-top: 8px;
     flex: 1 1 150px;
   }
 
   .priceCell {
+    padding-top: 8px;
+    padding-left: 10px;
     flex: 1 1 80px;
   }
 
